kustomize/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  # annotations:
  #   ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.localtest.me
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 8080
        path: /
        pathType: Prefix
